--- a/bai12-validatetion/views/users/create.pug
+++ b/bai12-validatetion/views/users/create.pug
@@ -8,8 +8,8 @@ block content
 	h1 Create user
 	form(action='/users/create', method='POST')
 		.form-group
-			label Name
-			input.form-control(type='text', name='name' value=values ? values.name : "")
-			label Phone
-			input.form-control(type='text', name='phone' value=values ? values.phone : "")
+			label(for="name") Name
+			input#name.form-control(type='text', name='name' value=values ? values.name : "")
+			label(for="phone") Phone
+			input#phone.form-control(type='text', name='phone' value=values ? values.phone : "")
 			button(type='submit' class="btn btn-primary mt-3") Create 
