add bai 17 signed cookie

--- a/coder-tokyo/template/common.pug
+++ b/coder-tokyo/template/common.pug
@@ -11,5 +11,7 @@ html
 						a.nav-link(href='/') Home
 					li.nav-item
 						a.nav-link(href='/users') Users
+			if currentuser
+				p= currentuser.name
 		.container
 			block content
