--- a/Uploadfile/template/common.pug
+++ b/Uploadfile/template/common.pug
@@ -11,6 +11,8 @@ html
 						a.nav-link(href='/') Home
 					li.nav-item
 						a.nav-link(href='/users') Users
+					li.nav-item
+						a.nav-link(href='/product') Product
 			if currentuser
 				p= currentuser.name
 		.container
