change database is mongodb

--- a/Uploadfile/views/users/userlist.pug
+++ b/Uploadfile/views/users/userlist.pug
@@ -23,4 +23,4 @@ block content
 				td
 					img(src=user.avatar ,width= 50)
 				td
-					a.btn.btn-info(href='/users/' + user.id) View
+					a.btn.btn-info(href='/users/' + user._id) View
